<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account_info"
            android:title="@string/account_info" />
        <item
            android:id="@+id/nav_change_pass"
            android:title="@string/change_pass" />
        <item
            android:id="@+id/nav_log_out"
            android:title="@string/log_out" />
    </group>

    <item android:title="@string/quick_access">
        <menu>
            <item
                android:id="@+id/nav_transfer_inside"
                android:title="@string/transfer_inside"/>

            <item
                android:id="@+id/nav_pay_electric_bill"
                android:title="@string/pay_electric_bill" />

            <item
                android:id="@+id/nav_pay_phone_bill"
                android:title="@string/pay_phone_bill"/>

            <item
                android:id="@+id/nav_transfer_outside"
                android:title="@string/transfer_outside"/>
            <item
                android:id="@+id/nav_pay_tax_bill"
                android:title="@string/pay_tax_bill" />
        </menu>
    </item>

</menu>
