<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/main_padding"
    android:layout_marginTop="@dimen/marginTop"
    android:background="@drawable/background_dialog">

    <TextView
        android:id="@+id/month_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:textColor="@color/colorText"
        style="@style/BillText"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/old_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_value"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/BillText"/>

        <TextView
            android:id="@+id/new_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_value"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            style="@style/BillText"/>

        <CheckBox
            android:id="@+id/pay_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/sum_money_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sum_money"
        style="@style/BillText"/>
</LinearLayout>